[gd_scene load_steps=16 format=4 uid="uid://dgfy3o7dr6b3r"]

[ext_resource type="Script" path="res://Scene/DemoScene/demo_scene.gd" id="1_lahig"]
[ext_resource type="TileSet" uid="uid://dkb2gqhi6px13" path="res://TileSet/game_tile_set.tres" id="1_pymur"]
[ext_resource type="Theme" uid="uid://bexgy8bnujb4b" path="res://Theme/game_theme.tres" id="1_sev7m"]
[ext_resource type="AudioStream" uid="uid://c24w31c17k8j0" path="res://Assets/Audio/BGM1.wav" id="2_fs0ap"]
[ext_resource type="Texture2D" uid="uid://epa6hamruayl" path="res://Assets/Backgrounds/PS_Clouds_ 1.png" id="2_k4gd0"]
[ext_resource type="AudioStream" uid="uid://syt07fropaxc" path="res://Assets/Audio/BGM2.mp3" id="3_jlqn6"]
[ext_resource type="Texture2D" uid="uid://brid50yoy7uap" path="res://Assets/Backgrounds/PS_Clouds_ 2.png" id="3_x2ja4"]
[ext_resource type="Texture2D" uid="uid://bf74uoocbwcke" path="res://Assets/Backgrounds/PS_Clouds_ 3.png" id="4_32u2g"]
[ext_resource type="AudioStream" uid="uid://c2simg00qwcdn" path="res://Assets/Audio/BGM3.mp3" id="4_oq5lf"]
[ext_resource type="Texture2D" uid="uid://druvgpamtm5xk" path="res://Assets/Backgrounds/PS_Clouds_ 5.png" id="5_6ivln"]
[ext_resource type="Script" path="res://Scene/DemoScene/ButtonSFXComponent.gd" id="6_18ke7"]
[ext_resource type="Texture2D" uid="uid://cjf2jgifw3upk" path="res://Assets/Backgrounds/PS_Clouds_ 4.png" id="6_cte4c"]
[ext_resource type="AudioStream" uid="uid://bccsyfk572adv" path="res://Assets/Audio/Button_Click.wav" id="7_1uxq3"]
[ext_resource type="PackedScene" uid="uid://df7x2us1ryo5d" path="res://Characters/Player/player.tscn" id="7_x8ug1"]
[ext_resource type="AudioStream" uid="uid://bv0oi3c48nfn6" path="res://Assets/Audio/Button_Hover.wav" id="8_5wi6l"]

[node name="DemoScene" type="Node2D"]
script = ExtResource("1_lahig")
bg_music1 = ExtResource("2_fs0ap")
bg_music2 = ExtResource("3_jlqn6")
bg_music3 = ExtResource("4_oq5lf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 47.0
grow_horizontal = 0
theme_override_constants/separation = 1

[node name="BGM1" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sev7m")
text = "音乐1"

[node name="ButtonSFXComponent" type="Node" parent="CanvasLayer/VBoxContainer/BGM1"]
script = ExtResource("6_18ke7")
click_sfx = ExtResource("7_1uxq3")
hover_sfx = ExtResource("8_5wi6l")

[node name="BGM2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sev7m")
text = "音乐2"

[node name="ButtonSFXComponent2" type="Node" parent="CanvasLayer/VBoxContainer/BGM2"]
script = ExtResource("6_18ke7")
click_sfx = ExtResource("7_1uxq3")
hover_sfx = ExtResource("8_5wi6l")

[node name="BGM3" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_sev7m")
text = "音乐3"

[node name="ButtonSFXComponent3" type="Node" parent="CanvasLayer/VBoxContainer/BGM3"]
script = ExtResource("6_18ke7")
click_sfx = ExtResource("7_1uxq3")
hover_sfx = ExtResource("8_5wi6l")

[node name="GlobalVolume" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 19.0

[node name="Label" type="Label" parent="CanvasLayer/GlobalVolume"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -5.5
offset_right = 51.0
offset_bottom = 6.5
grow_vertical = 2
theme = ExtResource("1_sev7m")
text = "全局音量"

[node name="GlobalVolumeSlider" type="HSlider" parent="CanvasLayer/GlobalVolume"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_sev7m")
max_value = 1.0
step = 0.1
value = 1.0

[node name="BGVolume" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 144.0
offset_right = 260.0
offset_bottom = 19.0

[node name="Label" type="Label" parent="CanvasLayer/BGVolume"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -5.5
offset_right = 51.0
offset_bottom = 6.5
grow_vertical = 2
theme = ExtResource("1_sev7m")
text = "音乐"

[node name="BGVolumeSlider" type="HSlider" parent="CanvasLayer/BGVolume"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_sev7m")
max_value = 1.0
step = 0.1
value = 1.0

[node name="SFXVolume" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 267.0
offset_right = 382.0
offset_bottom = 19.0

[node name="Label" type="Label" parent="CanvasLayer/SFXVolume"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 24.0
offset_bottom = 6.0
grow_vertical = 2
theme = ExtResource("1_sev7m")
text = "音效"

[node name="SFXVolumeSlider" type="HSlider" parent="CanvasLayer/SFXVolume"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_sev7m")
max_value = 1.0
step = 0.1
value = 1.0

[node name="Map" type="Node2D" parent="."]

[node name="Sky" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAgAAAAAAAEAAAACAAgAAAAAAAIAAAACAAgAAAAAAAMAAAACAAgAAAAAAAQAAAACAAgAAAAAAAUAAAACAAgAAAAAAAYAAAACAAgAAAAAAAcAAAACAAgAAAAAAAgAAAACAAgAAAAAAAkAAAACAAgAAAAAAAoAAAACAAgAAAAAAAsAAAACAAgAAAAAAAwAAAACAAgAAAAAAA0AAAACAAgAAAAAAA4AAAACAAgAAAAAAA8AAAACAAgAAAABAAAAAAACAAgAAAABAAEAAAACAAgAAAABAAIAAAACAAgAAAABAAMAAAACAAgAAAABAAQAAAACAAgAAAABAAUAAAACAAgAAAABAAYAAAACAAgAAAABAAcAAAACAAgAAAABAAgAAAACAAgAAAABAAkAAAACAAgAAAABAAoAAAACAAgAAAABAAsAAAACAAgAAAABAAwAAAACAAgAAAABAA0AAAACAAgAAAABAA4AAAACAAgAAAABAA8AAAACAAgAAAACAAAAAAACAAgAAAACAAEAAAACAAgAAAACAAIAAAACAAgAAAACAAMAAAACAAgAAAACAAQAAAACAAgAAAACAAUAAAACAAgAAAACAAYAAAACAAgAAAACAAcAAAACAAgAAAACAAgAAAACAAgAAAACAAkAAAACAAgAAAACAAoAAAACAAgAAAACAAsAAAACAAgAAAACAAwAAAACAAgAAAACAA0AAAACAAgAAAACAA4AAAACAAgAAAACAA8AAAACAAgAAAADAAAAAAACAAgAAAADAAEAAAACAAgAAAADAAIAAAACAAgAAAADAAMAAAACAAgAAAADAAQAAAACAAgAAAADAAUAAAACAAgAAAADAAYAAAACAAgAAAADAAcAAAACAAgAAAADAAgAAAACAAgAAAADAAkAAAACAAgAAAADAAoAAAACAAgAAAADAAsAAAACAAgAAAADAAwAAAACAAgAAAADAA0AAAACAAgAAAADAA4AAAACAAgAAAADAA8AAAACAAgAAAAEAAAAAAACAAgAAAAEAAEAAAACAAgAAAAEAAIAAAACAAgAAAAEAAMAAAACAAgAAAAEAAQAAAACAAgAAAAEAAUAAAACAAgAAAAEAAYAAAACAAgAAAAEAAcAAAACAAgAAAAEAAgAAAACAAgAAAAEAAkAAAACAAgAAAAEAAoAAAACAAgAAAAEAAsAAAACAAgAAAAEAAwAAAACAAgAAAAEAA0AAAACAAgAAAAEAA4AAAACAAgAAAAEAA8AAAACAAgAAAAFAAAAAAACAAgAAAAFAAEAAAACAAgAAAAFAAIAAAACAAgAAAAFAAMAAAACAAgAAAAFAAQAAAACAAgAAAAFAAUAAAACAAgAAAAFAAYAAAACAAgAAAAFAAcAAAACAAgAAAAFAAgAAAACAAgAAAAFAAkAAAACAAgAAAAFAAoAAAACAAgAAAAFAAsAAAACAAgAAAAFAAwAAAACAAgAAAAFAA0AAAACAAgAAAAFAA4AAAACAAgAAAAFAA8AAAACAAgAAAAGAAAAAAACAAgAAAAGAAEAAAACAAgAAAAGAAIAAAACAAgAAAAGAAMAAAACAAgAAAAGAAQAAAACAAgAAAAGAAUAAAACAAgAAAAGAAYAAAACAAgAAAAGAAcAAAACAAgAAAAGAAgAAAACAAgAAAAGAAkAAAACAAgAAAAGAAoAAAACAAgAAAAGAAsAAAACAAgAAAAGAAwAAAACAAgAAAAGAA0AAAACAAgAAAAGAA4AAAACAAgAAAAGAA8AAAACAAgAAAAHAAAAAAACAAgAAAAHAAEAAAACAAgAAAAHAAIAAAACAAgAAAAHAAMAAAACAAgAAAAHAAQAAAACAAgAAAAHAAUAAAACAAgAAAAHAAYAAAACAAgAAAAHAAcAAAACAAgAAAAHAAgAAAACAAgAAAAHAAkAAAACAAgAAAAHAAoAAAACAAgAAAAHAAsAAAACAAgAAAAHAAwAAAACAAgAAAAHAA0AAAACAAgAAAAHAA4AAAACAAgAAAAHAA8AAAACAAgAAAAIAAAAAAACAAgAAAAIAAEAAAACAAgAAAAIAAIAAAACAAgAAAAIAAMAAAACAAgAAAAIAAQAAAACAAgAAAAIAAUAAAACAAgAAAAIAAYAAAACAAgAAAAIAAcAAAACAAgAAAAIAAgAAAACAAgAAAAIAAkAAAACAAgAAAAIAAoAAAACAAgAAAAIAAsAAAACAAgAAAAIAAwAAAACAAgAAAAIAA0AAAACAAgAAAAIAA4AAAACAAgAAAAIAA8AAAACAAgAAAAJAAAAAAACAAgAAAAJAAEAAAACAAgAAAAJAAIAAAACAAgAAAAJAAMAAAACAAgAAAAJAAQAAAACAAgAAAAJAAUAAAACAAgAAAAJAAYAAAACAAgAAAAJAAcAAAACAAgAAAAJAAgAAAACAAgAAAAJAAkAAAACAAgAAAAJAAoAAAACAAgAAAAJAAsAAAACAAgAAAAJAAwAAAACAAgAAAAJAA0AAAACAAgAAAAJAA4AAAACAAgAAAAJAA8AAAACAAgAAAAKAAAAAAACAAgAAAAKAAEAAAACAAgAAAAKAAIAAAACAAgAAAAKAAMAAAACAAgAAAAKAAQAAAACAAgAAAAKAAUAAAACAAgAAAAKAAYAAAACAAgAAAAKAAcAAAACAAgAAAAKAAgAAAACAAgAAAAKAAkAAAACAAgAAAAKAAoAAAACAAgAAAAKAAsAAAACAAgAAAAKAAwAAAACAAgAAAAKAA0AAAACAAgAAAAKAA4AAAACAAgAAAAKAA8AAAACAAgAAAALAAAAAAACAAgAAAALAAEAAAACAAgAAAALAAIAAAACAAgAAAALAAMAAAACAAgAAAALAAQAAAACAAgAAAALAAUAAAACAAgAAAALAAYAAAACAAgAAAALAAcAAAACAAgAAAALAAgAAAACAAgAAAALAAkAAAACAAgAAAALAAoAAAACAAgAAAALAAsAAAACAAgAAAALAAwAAAACAAgAAAALAA0AAAACAAgAAAALAA4AAAACAAgAAAALAA8AAAACAAgAAAAMAAAAAAACAAgAAAAMAAEAAAACAAgAAAAMAAIAAAACAAgAAAAMAAMAAAACAAgAAAAMAAQAAAACAAgAAAAMAAUAAAACAAgAAAAMAAYAAAACAAgAAAAMAAcAAAACAAgAAAAMAAgAAAACAAgAAAAMAAkAAAACAAgAAAAMAAoAAAACAAgAAAAMAAsAAAACAAgAAAAMAAwAAAACAAgAAAAMAA0AAAACAAgAAAAMAA4AAAACAAgAAAAMAA8AAAACAAgAAAANAAAAAAACAAgAAAANAAEAAAACAAgAAAANAAIAAAACAAgAAAANAAMAAAACAAgAAAANAAQAAAACAAgAAAANAAUAAAACAAgAAAANAAYAAAACAAgAAAANAAcAAAACAAgAAAANAAgAAAACAAgAAAANAAkAAAACAAgAAAANAAoAAAACAAgAAAANAAsAAAACAAgAAAANAAwAAAACAAgAAAANAA0AAAACAAgAAAANAA4AAAACAAgAAAANAA8AAAACAAgAAAANABAAAAACAAgAAAAOAAAAAAACAAgAAAAOAAEAAAACAAgAAAAOAAIAAAACAAgAAAAOAAMAAAACAAgAAAAOAAQAAAACAAgAAAAOAAUAAAACAAgAAAAOAAYAAAACAAgAAAAOAAcAAAACAAgAAAAOAAgAAAACAAgAAAAOAAkAAAACAAgAAAAOAAoAAAACAAgAAAAOAAsAAAACAAgAAAAOAAwAAAACAAgAAAAOAA0AAAACAAgAAAAOAA4AAAACAAgAAAAOAA8AAAACAAgAAAAOABAAAAACAAgAAAAPAAAAAAACAAgAAAAPAAEAAAACAAgAAAAPAAIAAAACAAgAAAAPAAMAAAACAAgAAAAPAAQAAAACAAgAAAAPAAUAAAACAAgAAAAPAAYAAAACAAgAAAAPAAcAAAACAAgAAAAPAAgAAAACAAgAAAAPAAkAAAACAAgAAAAPAAoAAAACAAgAAAAPAAsAAAACAAgAAAAPAAwAAAACAAgAAAAPAA0AAAACAAgAAAAPAA4AAAACAAgAAAAPAA8AAAACAAgAAAAPABAAAAACAAgAAAAQAAAAAAACAAgAAAAQAAEAAAACAAgAAAAQAAIAAAACAAgAAAAQAAMAAAACAAgAAAAQAAQAAAACAAgAAAAQAAUAAAACAAgAAAAQAAYAAAACAAgAAAAQAAcAAAACAAgAAAAQAAgAAAACAAgAAAAQAAkAAAACAAgAAAAQAAoAAAACAAgAAAAQAAsAAAACAAgAAAAQAAwAAAACAAgAAAAQAA0AAAACAAgAAAAQAA4AAAACAAgAAAAQAA8AAAACAAgAAAAQABAAAAACAAgAAAARAAAAAAACAAgAAAARAAEAAAACAAgAAAARAAIAAAACAAgAAAARAAMAAAACAAgAAAARAAQAAAACAAgAAAARAAUAAAACAAgAAAARAAYAAAACAAgAAAARAAcAAAACAAgAAAARAAgAAAACAAgAAAARAAkAAAACAAgAAAARAAoAAAACAAgAAAARAAsAAAACAAgAAAARAAwAAAACAAgAAAARAA0AAAACAAgAAAARAA4AAAACAAgAAAARAA8AAAACAAgAAAARABAAAAACAAgAAAASAAAAAAACAAgAAAASAAEAAAACAAgAAAASAAIAAAACAAgAAAASAAMAAAACAAgAAAASAAQAAAACAAgAAAASAAUAAAACAAgAAAASAAYAAAACAAgAAAASAAcAAAACAAgAAAASAAgAAAACAAgAAAASAAkAAAACAAgAAAASAAoAAAACAAgAAAASAAsAAAACAAgAAAASAAwAAAACAAgAAAASAA0AAAACAAgAAAASAA4AAAACAAgAAAASAA8AAAACAAgAAAASABAAAAACAAgAAAATAAAAAAACAAgAAAATAAEAAAACAAgAAAATAAIAAAACAAgAAAATAAMAAAACAAgAAAATAAQAAAACAAgAAAATAAUAAAACAAgAAAATAAYAAAACAAgAAAATAAcAAAACAAgAAAATAAgAAAACAAgAAAATAAkAAAACAAgAAAATAAoAAAACAAgAAAATAAsAAAACAAgAAAATAAwAAAACAAgAAAATAA0AAAACAAgAAAATAA4AAAACAAgAAAATAA8AAAACAAgAAAATABAAAAACAAgAAAAUAAAAAAACAAgAAAAUAAEAAAACAAgAAAAUAAIAAAACAAgAAAAUAAMAAAACAAgAAAAUAAQAAAACAAgAAAAUAAUAAAACAAgAAAAUAAYAAAACAAgAAAAUAAcAAAACAAgAAAAUAAgAAAACAAgAAAAUAAkAAAACAAgAAAAUAAoAAAACAAgAAAAUAAsAAAACAAgAAAAUAAwAAAACAAgAAAAUAA0AAAACAAgAAAAUAA4AAAACAAgAAAAUAA8AAAACAAgAAAAUABAAAAACAAgAAAAVAAAAAAACAAgAAAAVAAEAAAACAAgAAAAVAAIAAAACAAgAAAAVAAMAAAACAAgAAAAVAAQAAAACAAgAAAAVAAUAAAACAAgAAAAVAAYAAAACAAgAAAAVAAcAAAACAAgAAAAVAAgAAAACAAgAAAAVAAkAAAACAAgAAAAVAAoAAAACAAgAAAAVAAsAAAACAAgAAAAVAAwAAAACAAgAAAAVAA0AAAACAAgAAAAVAA4AAAACAAgAAAAVAA8AAAACAAgAAAAVABAAAAACAAgAAAAWAAAAAAACAAgAAAAWAAEAAAACAAgAAAAWAAIAAAACAAgAAAAWAAMAAAACAAgAAAAWAAQAAAACAAgAAAAWAAUAAAACAAgAAAAWAAYAAAACAAgAAAAWAAcAAAACAAgAAAAWAAgAAAACAAgAAAAWAAkAAAACAAgAAAAWAAoAAAACAAgAAAAWAAsAAAACAAgAAAAWAAwAAAACAAgAAAAWAA0AAAACAAgAAAAWAA4AAAACAAgAAAAWAA8AAAACAAgAAAAWABAAAAACAAgAAAAXAAAAAAACAAgAAAAXAAEAAAACAAgAAAAXAAIAAAACAAgAAAAXAAMAAAACAAgAAAAXAAQAAAACAAgAAAAXAAUAAAACAAgAAAAXAAYAAAACAAgAAAAXAAcAAAACAAgAAAAXAAgAAAACAAgAAAAXAAkAAAACAAgAAAAXAAoAAAACAAgAAAAXAAsAAAACAAgAAAAXAAwAAAACAAgAAAAXAA0AAAACAAgAAAAXAA4AAAACAAgAAAAXAA8AAAACAAgAAAAXABAAAAACAAgAAAAYAAAAAAACAAgAAAAYAAEAAAACAAgAAAAYAAIAAAACAAgAAAAYAAMAAAACAAgAAAAYAAQAAAACAAgAAAAYAAUAAAACAAgAAAAYAAYAAAACAAgAAAAYAAcAAAACAAgAAAAYAAgAAAACAAgAAAAYAAkAAAACAAgAAAAYAAoAAAACAAgAAAAYAAsAAAACAAgAAAAYAAwAAAACAAgAAAAYAA0AAAACAAgAAAAYAA4AAAACAAgAAAAYAA8AAAACAAgAAAAYABAAAAACAAgAAAAZAAAAAAACAAgAAAAZAAEAAAACAAgAAAAZAAIAAAACAAgAAAAZAAMAAAACAAgAAAAZAAQAAAACAAgAAAAZAAUAAAACAAgAAAAZAAYAAAACAAgAAAAZAAcAAAACAAgAAAAZAAgAAAACAAgAAAAZAAkAAAACAAgAAAAZAAoAAAACAAgAAAAZAAsAAAACAAgAAAAZAAwAAAACAAgAAAAZAA0AAAACAAgAAAAZAA4AAAACAAgAAAAZAA8AAAACAAgAAAAZABAAAAACAAgAAAAaAAAAAAACAAgAAAAaAAEAAAACAAgAAAAaAAIAAAACAAgAAAAaAAMAAAACAAgAAAAaAAQAAAACAAgAAAAaAAUAAAACAAgAAAAaAAYAAAACAAgAAAAaAAcAAAACAAgAAAAaAAgAAAACAAgAAAAaAAkAAAACAAgAAAAaAAoAAAACAAgAAAAaAAsAAAACAAgAAAAaAAwAAAACAAgAAAAaAA0AAAACAAgAAAAaAA4AAAACAAgAAAAaAA8AAAACAAgAAAAaABAAAAACAAgAAAAbAAAAAAACAAgAAAAbAAEAAAACAAgAAAAbAAIAAAACAAgAAAAbAAMAAAACAAgAAAAbAAQAAAACAAgAAAAbAAUAAAACAAgAAAAbAAYAAAACAAgAAAAbAAcAAAACAAgAAAAbAAgAAAACAAgAAAAbAAkAAAACAAgAAAAbAAoAAAACAAgAAAAbAAsAAAACAAgAAAAbAAwAAAACAAgAAAAbAA0AAAACAAgAAAAbAA4AAAACAAgAAAAbAA8AAAACAAgAAAAbABAAAAACAAgAAAAcAAAAAAACAAgAAAAcAAEAAAACAAgAAAAcAAIAAAACAAgAAAAcAAMAAAACAAgAAAAcAAQAAAACAAgAAAAcAAUAAAACAAgAAAAcAAYAAAACAAgAAAAcAAcAAAACAAgAAAAcAAgAAAACAAgAAAAcAAkAAAACAAgAAAAcAAoAAAACAAgAAAAcAAsAAAACAAgAAAAcAAwAAAACAAgAAAAcAA0AAAACAAgAAAAcAA4AAAACAAgAAAAcAA8AAAACAAgAAAAcABAAAAACAAgAAAAdAAAAAAACAAgAAAAdAAEAAAACAAgAAAAdAAIAAAACAAgAAAAdAAMAAAACAAgAAAAdAAQAAAACAAgAAAAdAAUAAAACAAgAAAAdAAYAAAACAAgAAAAdAAcAAAACAAgAAAAdAAgAAAACAAgAAAAdAAsAAAACAAgAAAAdAAwAAAACAAgAAAAdAA0AAAACAAgAAAAdAA4AAAACAAgAAAAdAA8AAAACAAgAAAAdABAAAAACAAgAAAAAABAAAAACAAgAAAABABAAAAACAAgAAAACABAAAAACAAgAAAADABAAAAACAAgAAAAEABAAAAACAAgAAAAFABAAAAACAAgAAAAGABAAAAACAAgAAAAHABAAAAACAAgAAAAIABAAAAACAAgAAAAJABAAAAACAAgAAAAKABAAAAACAAgAAAALABAAAAACAAgAAAAMABAAAAACAAgAAAAdAAkAAAACAAgAAAAdAAoAAAACAAgAAAA=")
tile_set = ExtResource("1_pymur")

[node name="Clouds" type="Node2D" parent="Map"]

[node name="PsClouds1" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(77, 71)
texture = ExtResource("2_k4gd0")

[node name="PsClouds2" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(277, 124)
texture = ExtResource("3_x2ja4")

[node name="PsClouds3" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(416, 70)
texture = ExtResource("4_32u2g")

[node name="PsClouds5" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(97, 125)
texture = ExtResource("5_6ivln")

[node name="PsClouds6" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(293, 194)
texture = ExtResource("5_6ivln")

[node name="PsClouds7" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(4, 200)
texture = ExtResource("5_6ivln")

[node name="PsClouds4" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(238, 45)
texture = ExtResource("3_x2ja4")

[node name="PsClouds8" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(477, 157)
texture = ExtResource("6_cte4c")

[node name="PsClouds9" type="Sprite2D" parent="Map/Clouds"]
position = Vector2(46, 53)
texture = ExtResource("5_6ivln")

[node name="Enviroment" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAAIAAYAAAAIAAYAAAAVAAkAAAAIAAYAAAACAA4AAAAIAAYAAAAcAA4AAAAMAAYAAAAOAA4AAAAMAAYAAAAMAAcAAAAKAAcAAAAaAAoAAAAKAAcAAAAKAAcAAAAPAAcAAAAHAA8AAAAIAAoAAAAZAAoAAAAFAAoAAAAGAAgAAAAFAAoAAAADAA8AAAAHAAkAAAALAA8AAAAKAAUAAAAXAAoAAAAHAAkAAAANAAgAAAAHAAkAAAASAA8AAAALAAkAAAAIAA8AAAALAAkAAAAIABAAAAALAAkAAAAAAA8AAAALAAkAAAAYAAoAAAALAAkAAAATAAoAAAALAAkAAAASAAoAAAAHAAUAAAAZAA8AAAANAAQAAAAdAA8AAAAOAAQAAAABAA8AAAANAAQAAAABABAAAAANAAQAAAATAA8AAAALAAQAAAAWAAoAAAALAAoAAAANAA8AAAAJAAoAAAALAAcAAAAJAAoAAAA=")
tile_set = ExtResource("1_pymur")

[node name="Ground" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAASAAsAAAABAAAAAAATAAsAAAACAAAAAAAUAAsAAAACAAAAAAAVAAsAAAACAAAAAAAWAAsAAAACAAAAAAAXAAsAAAACAAAAAAAYAAsAAAACAAAAAAAZAAsAAAACAAAAAAAaAAsAAAADAAAAAAASAAwAAAAAAAIAAAASAA0AAAAAAAMAAAATAA0AAAACAAQAAAAUAA0AAAABAAMAAAAUAA4AAAABAAQAAAAVAA4AAAACAAQAAAAWAA4AAAACAAQAAAAXAA4AAAACAAQAAAAYAA4AAAACAAQAAAAaAA4AAAADAAQAAAAZAA4AAAACAAQAAAAaAA0AAAAEAAIAAAAaAAwAAAAEAAIAAAATAAwAAAACAAIAAAAUAAwAAAACAAIAAAAVAAwAAAACAAIAAAAWAAwAAAACAAIAAAAXAAwAAAACAAIAAAAYAAwAAAACAAIAAAAZAAwAAAACAAIAAAAZAA0AAAACAAIAAAAYAA0AAAACAAIAAAAXAA0AAAACAAIAAAAWAA0AAAACAAIAAAAVAA0AAAACAAIAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAIAAAAGAAsAAAAAAAMAAAAHAAgAAAABAAAAAAAHAAkAAAABAAEAAAAHAAoAAAABAAIAAAAHAAsAAAABAAMAAAAHAAwAAAABAAQAAAAIAAgAAAACAAAAAAAIAAkAAAACAAEAAAAIAAoAAAACAAIAAAAIAAsAAAACAAMAAAAIAAwAAAACAAQAAAAJAAgAAAACAAAAAAAJAAkAAAACAAEAAAAJAAoAAAACAAIAAAAJAAsAAAACAAMAAAAJAAwAAAACAAQAAAAKAAgAAAACAAAAAAAKAAkAAAACAAEAAAAKAAoAAAACAAIAAAAKAAsAAAACAAMAAAAKAAwAAAACAAQAAAALAAgAAAACAAAAAAALAAkAAAACAAEAAAALAAoAAAACAAIAAAALAAsAAAACAAMAAAALAAwAAAACAAQAAAAMAAgAAAADAAAAAAAMAAkAAAADAAEAAAAMAAoAAAADAAIAAAAMAAsAAAADAAMAAAAMAAwAAAADAAQAAAANAAkAAAAEAAEAAAANAAoAAAAEAAIAAAANAAsAAAAEAAMAAAAAABAAAAAIAAAAAAABABAAAAAJAAAAAAACABAAAAAJAAAAAAADABAAAAAJAAAAAAAEABAAAAAJAAAAAAAFABAAAAAJAAAAAAAGABAAAAAJAAAAAAAHABAAAAAJAAAAAAAIABAAAAAJAAAAAAAJABAAAAAJAAAAAAAKABAAAAAJAAAAAAALABAAAAAJAAAAAAAMABAAAAAJAAAAAAANABAAAAAJAAAAAAAOABAAAAAJAAAAAAAPABAAAAAJAAAAAAAQABAAAAAJAAAAAAARABAAAAAJAAAAAAASABAAAAAJAAAAAAATABAAAAAJAAAAAAAUABAAAAAJAAAAAAAVABAAAAAJAAAAAAAWABAAAAAJAAAAAAAXABAAAAAJAAAAAAAYABAAAAAJAAAAAAAZABAAAAAJAAAAAAAaABAAAAAJAAAAAAAbABAAAAAJAAAAAAAcABAAAAAJAAAAAAAdABAAAAAKAAAAAAD/////AAAAAAsAAAD//wAAAAAAAAsAAAD//wEAAAAAAAsAAAD//wIAAAAAAAsAAAD//wMAAAAAAAsAAAD//wQAAAAAAAsAAAD//wUAAAAAAAsAAAD//wYAAAAAAAsAAAD//wcAAAAAAAsAAAD//wgAAAAAAAsAAAD//wkAAAAAAAsAAAD//woAAAAAAAsAAAD//wsAAAAAAAsAAAD//wwAAAAAAAsAAAD//w0AAAAAAAsAAAD//w4AAAAAAAsAAAD//w8AAAAAAAsAAAD//xAAAAAAAAsAAAAAAP//AAAAAAsAAAABAP//AAAAAAsAAAACAP//AAAAAAsAAAADAP//AAAAAAsAAAAEAP//AAAAAAsAAAAFAP//AAAAAAsAAAAGAP//AAAAAAsAAAAHAP//AAAAAAsAAAAIAP//AAAAAAsAAAAJAP//AAAAAAsAAAAKAP//AAAAAAsAAAALAP//AAAAAAsAAAAMAP//AAAAAAsAAAANAP//AAAAAAsAAAAOAP//AAAAAAsAAAAPAP//AAAAAAsAAAAQAP//AAAAAAsAAAARAP//AAAAAAsAAAASAP//AAAAAAsAAAATAP//AAAAAAsAAAAUAP//AAAAAAsAAAAVAP//AAAAAAsAAAAWAP//AAAAAAsAAAAXAP//AAAAAAsAAAAYAP//AAAAAAsAAAAZAP//AAAAAAsAAAAaAP//AAAAAAsAAAAbAP//AAAAAAsAAAAcAP//AAAAAAsAAAAdAP//AAAAAAsAAAAeAP//AAAAAAsAAAAeAAAAAAAAAAsAAAAeAAEAAAAAAAsAAAAeAAIAAAAAAAsAAAAeAAMAAAAAAAsAAAAeAAQAAAAAAAsAAAAeAAUAAAAAAAsAAAAeAAYAAAAAAAsAAAAeAAcAAAAAAAsAAAAeAAgAAAAAAAsAAAAeAAkAAAAAAAsAAAAeAAoAAAAAAAsAAAAeAAsAAAAAAAsAAAAeAAwAAAAAAAsAAAAeAA0AAAAAAAsAAAAeAA4AAAAAAAsAAAAeAA8AAAAAAAsAAAAeABAAAAAAAAsAAAD//xEAAAAAAAsAAAAAABEAAAAAAAsAAAABABEAAAAAAAsAAAACABEAAAAAAAsAAAADABEAAAAAAAsAAAAEABEAAAAAAAsAAAAFABEAAAAAAAsAAAAGABEAAAAAAAsAAAAHABEAAAAAAAsAAAAIABEAAAAAAAsAAAAJABEAAAAAAAsAAAAKABEAAAAAAAsAAAALABEAAAAAAAsAAAAMABEAAAAAAAsAAAANABEAAAAAAAsAAAAOABEAAAAAAAsAAAAPABEAAAAAAAsAAAAQABEAAAAAAAsAAAARABEAAAAAAAsAAAASABEAAAAAAAsAAAATABEAAAAAAAsAAAAUABEAAAAAAAsAAAAVABEAAAAAAAsAAAAWABEAAAAAAAsAAAAXABEAAAAAAAsAAAAYABEAAAAAAAsAAAAZABEAAAAAAAsAAAAaABEAAAAAAAsAAAAbABEAAAAAAAsAAAAcABEAAAAAAAsAAAAdABEAAAAAAAsAAAAeABEAAAAAAAsAAAA=")
tile_set = ExtResource("1_pymur")

[node name="Player" parent="." instance=ExtResource("7_x8ug1")]
position = Vector2(78, 253)

[connection signal="pressed" from="CanvasLayer/VBoxContainer/BGM1" to="." method="_on_bgm_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BGM2" to="." method="_on_bgm_2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BGM3" to="." method="_on_bgm_3_pressed"]
[connection signal="value_changed" from="CanvasLayer/GlobalVolume/GlobalVolumeSlider" to="." method="_on_global_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/BGVolume/BGVolumeSlider" to="." method="_on_bg_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
